// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination onlyNext snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-8r2q2l"
  >
    <div
      class="css-vurnku"
    />
    <div
      class="css-vurnku"
    >
      <a
        class="css-10zwoio"
        href="/"
      >
        <div
          class="css-1my6hv5"
        >
          <span
            class="css-c3r86m"
          >
            Next
          </span>
          <div
            class="css-9tifnv"
          >
            <span
              class="css-1s8umv4"
            >
              link to next
            </span>
            <svg
              aria-hidden="true"
              class="octicon"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.22 2.97a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06l2.97-2.97H3.75a.75.75 0 010-1.5h7.44L8.22 4.03a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination onlyPrev snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-8r2q2l"
  >
    <div
      class="css-vurnku"
    >
      <a
        class="css-10zwoio"
        href="/"
      >
        <div
          class="css-1gq2x6q"
        >
          <span
            class="css-c3r86m"
          >
            Previous
          </span>
          <div
            class="css-9tifnv"
          >
            <svg
              aria-hidden="true"
              class="octicon"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.78 12.53a.75.75 0 01-1.06 0L2.47 8.28a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L4.81 7h7.44a.75.75 0 010 1.5H4.81l2.97 2.97a.75.75 0 010 1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="css-1s8umv4"
            >
              link to prev
            </span>
          </div>
        </div>
      </a>
    </div>
    <div
      class="css-vurnku"
    />
  </div>
</DocumentFragment>
`;

exports[`Pagination overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="width: 100%;"
  >
    <div
      class="css-8r2q2l"
    >
      <div
        class="css-vurnku"
      >
        <a
          class="css-10zwoio"
          href="/"
        >
          <div
            class="css-1gq2x6q"
          >
            <span
              class="css-c3r86m"
            >
              Previous
            </span>
            <div
              class="css-9tifnv"
            >
              <svg
                aria-hidden="true"
                class="octicon"
                fill="currentColor"
                height="16"
                role="img"
                style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.78 12.53a.75.75 0 01-1.06 0L2.47 8.28a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L4.81 7h7.44a.75.75 0 010 1.5H4.81l2.97 2.97a.75.75 0 010 1.06z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="css-1s8umv4"
              >
                link to prev
              </span>
            </div>
          </div>
        </a>
      </div>
      <div
        class="css-vurnku"
      >
        <a
          class="css-10zwoio"
          href="/"
        >
          <div
            class="css-1my6hv5"
          >
            <span
              class="css-c3r86m"
            >
              Next
            </span>
            <div
              class="css-9tifnv"
            >
              <span
                class="css-1s8umv4"
              >
                link to prev
              </span>
              <svg
                aria-hidden="true"
                class="octicon"
                fill="currentColor"
                height="16"
                role="img"
                style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.22 2.97a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06l2.97-2.97H3.75a.75.75 0 010-1.5h7.44L8.22 4.03a.75.75 0 010-1.06z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
